# enhanced_shap

./: .buildinfo  .gitignore  CHANGELOG.md  CONTRIBUTING.md  MANIFEST.in  PUBLISHING.md  README.md  build_cpp.sh  clean_build.sh  dev  genindex.html  index.html  init.sh  objects.inv  publish.sh  py-modindex.html  pyproject.toml  requirements.txt  search.html  searchindex.js  setup.py  shap_enhanced_api.html
.doctrees/: environment.pickle  index.doctree  shap_enhanced_api.doctree
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  publish.yml  release.yml
_modules/: index.html
_modules/shap_enhanced/: base_explainer.html
_modules/shap_enhanced/explainers/: ABSHAP.html  AttnSHAP.html  BSHAP.html  CASHAP.html  CMSHAP.html  ECSHAP.html  ERSHAP.html  ESSHAP.html  LatentSHAP.html  MBSHAP.html  RLSHAP.html  SCSHAP.html  SPSHAP.html  SurroSHAP.html  TimeSHAP.html  hSHAP.html
_modules/shap_enhanced/tools/: comparison.html  datasets.html  evaluation.html  predefined_models.html  timer.html  visulization.html
_sources/: shap_enhanced_api.rst.txt
docs/: Makefile  test_docs.py
docs/source/: conf.py  index.rst
examples/: explain_sequential_model.ipynb  explain_sequential_model.py  explain_tabular_model.ipynb  shap_sequential_model.ipynb  shap_tabular_model.ipynb
notebooks/: shap_sequential_model.ipynb  shap_tabular_model.ipynb
scripts/: build.sh  docs.sh  lint.sh  plot.ipynb  ppm_dummy_example.ipynb  publish.sh  shap_sequential_model.ipynb  shap_tabular_model.ipynb  test.sh  test_code_structure.py  test_imports.py  test_refactored.py  toy.ipynb  utils.sh
scripts/plot/: plot.ipynb
src/: CMakeLists.txt
src/ESHAP/: __init__.py  base.py  shap_engine.py  simulation.py
src/ESHAP/modules/: __init__.py  sequential.py  tabular.py
src/ESHAP/utils/: __init__.py
src/shap_enhanced/: __init__.py  _version.py  base_explainer.py
src/shap_enhanced/algorithms/: __init__.py  approximation.py  approximation.pyi  attention.py  attention.pyi  coalition_sampling.py  data_processing.py  distance_metrics.py  distance_metrics.pyi  integration.py  integration.pyi  interpolation.py  interpolation.pyi  masking.py  masking.pyi  model_evaluation.py  normalization.py  pca_tools.py  perturbation.py  perturbation.pyi  sampling.py  sampling.pyi  shap_computation.py  shapley_kernel.py  shapley_kernel.pyi  test.py
src/shap_enhanced/algorithms/_cpp/: approximation.cpp  attention.cpp  distance_metrics.cpp  integration.cpp  interpolation.cpp  masking.cpp  perturbation.cpp  sampling.cpp  shapley_kernel.cpp
src/shap_enhanced/datasets/: __init__.py  synthetic_sequential.py  synthetic_sequential.pyi  synthetic_sparse.py  synthetic_sparse.pyi  synthetic_tabular.py  synthetic_tabular.pyi  synthetic_vision.py
src/shap_enhanced/datasets/_cpp/: synthetic_sequential.cpp  synthetic_sparse.cpp  synthetic_tabular.cpp
src/shap_enhanced/explainers/: AB-SHAP.py  ABSHAP.py  AttnSHAP.py  BSHAP.py  CASHAP.py  CM-SHAP.py  CMSHAP.py  EC-SHAP.py  ECSHAP.py  ER-SHAP.py  ERSHAP.py  ES-SHAP.py  ESSHAP.py  LatentSHAP.py  MB-SHAP.py  MBSHAP.py  RL-SHAP.py  RLSHAP.py  SC-SHAP.py  SCSHAP.py  SPSHAP.py  Support-PreservingSHAP.py  SurroSHAP.py  TimeSHAP.py  __init__.py  base.py  base_explainer.py  basic_explainer.py  h-SHAP.py  hSHAP.py
src/shap_enhanced/explainers/gradient_based/: __init__.py  deeplift_explainer.py  expected_gradients_explainer.py  gradient_explainer.py  guidedbackprop_explainer.py  integrated_gradients_explainer.py  noisegrad_explainer.py  smoothgrad_explainer.py
src/shap_enhanced/explainers/interaction_effects/: __init__.py  dependence_explainer.py  shap_interaction_explainer.py
src/shap_enhanced/explainers/kernel_sampling/: __init__.py  kernel_explainer.py  lime_style_explainer.py  random_sampling_explainer.py
src/shap_enhanced/explainers/perturbation_based/: __init__.py  ablation_explainer.py  occlusion_explainer.py  perturbation_explainer.py
src/shap_enhanced/explainers/sequential_attention/: __init__.py  attention_explainer.py  recurrent_explainer.py  sp_shap_explainer.py  time_explainer.py  ts_shap_explainer.py
src/shap_enhanced/explainers/sparse_tabular/: __init__.py  grouped_sparse_explainer.py  pca_sparse_explainer.py  sparse_explainer.py
src/shap_enhanced/explainers/tree/: __init__.py  advanced_tree_explainer.py  base_tree_explainer.py  interaction_explainer.py  path_based_explainer.py
src/shap_enhanced/models/: __init__.py  base_model.py
src/shap_enhanced/models/multimodal/: __init__.py  early_fusion_model.py  late_fusion_model.py
src/shap_enhanced/models/sequential/: __init__.py  bidirectional_lstm.py  simple_lstm.py  time_series_mlp.py  transformer_encoder.py
src/shap_enhanced/models/tabular/: __init__.py  tabular_lightgbm.py  tabular_mlp.py  tabular_xgboost.py
src/shap_enhanced/models/vision/: __init__.py  resnet_tiny.py  simple_cnn.py
src/shap_enhanced/simulation/: __init__.py  comparison.py  evaluation.py  simulator.py  synthetic_data.py
src/shap_enhanced/tools/: __init__.py  comparison.py  datasets.py  evaluation.py  predefined_models.py  timer.py  visulization.py
src/shap_enhanced/utils/: __init__.py  config_loader.py  logging.py  seed.py  timer.py
src/shap_enhanced/visualization/: __init__.py  attention_visualization.py  evaluation_metrics_plot.py  feature_importance_plot.py  interaction_plot.py  time_series_plot.py
tests/: __init__.py  test_base_explainer.py  test_base_explainer_advanced.py  test_edge_cases.py  test_explainers.py  test_explainers_imports.py  test_init.py  test_tools.py  test_tools_advanced.py  test_tools_comprehensive.py
thesis/expose/: abstract.tex  content.tex  main.tex  ref.bib
thesis/main/: LICENSE  isthesis.cls  library.bib  main.tex
thesis/main/appendices/: appendix.tex
thesis/main/config/: acronyms.tex  commands.tex
thesis/main/sections/: 01_Introduction.tex  02_Elements.tex  03_Compilation.tex
