[build-system]
requires = ["setuptools>=64", "wheel", "pybind11"]
build-backend = "setuptools.build_meta"

[project]
name = "shap-enhanced"
version = "0.0.1"
description = "Enhanced SHAP with C++ extensions"
authors = [{name = "Niyang Bai"}]
readme = "README.md"
requires-python = ">=3.8"

[tool.setuptools]
packages = ["shap_enhanced"]
package-dir = {"" = "src"}
